--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -208,7 +208,7 @@
                         <div class="px-4 py-2">
                             <div class="space-y-1">
                                 <a href="{{ url_for('top_level.dashboard') }}" data-testid="nav-dashboard-link" class="px-4 py-2 hover:bg-teal rounded transition block">Dashboard</a>
-                                <a href="{{ url_for('top_level.feedlot_hub') }}" data-testid="nav-feedlot-hub-link" class="px-4 py-2 hover:bg-teal rounded transition block">Feedlot Hub</a>
+                                <a href="{{ url_for('top_level.feedlot_hub') }}" data-testid="nav-feedlot-hub-link" class="px-4 py-2 hover:bg-teal rounded transition block">Your Feedlots</a>
                                 <a href="{{ url_for('top_level.settings') }}" data-testid="nav-settings-link" class="px-4 py-2 hover:bg-teal rounded transition block">Settings</a>
                             </div>
                         </div>
