--- a/app/templates/top_level/api_keys.html
+++ b/app/templates/top_level/api_keys.html
@@ -111,7 +111,7 @@
 <div class="bg-white rounded-lg shadow-md p-8 text-center">
     <p class="text-gray-600 text-lg mb-4">No feedlots found.</p>
     <a href="{{ url_for('top_level.feedlot_hub') }}" data-testid="view-feedlot-hub-link" class="inline-block bg-teal hover:opacity-90 text-white font-semibold py-2 px-6 rounded-lg transition duration-200">
-        View Feedlot Hub
+        View Your Feedlots
     </a>
 </div>
 {% endif %}
