--- a/app/templates/feedlot/manifest/history.html
+++ b/app/templates/feedlot/manifest/history.html
@@ -35,7 +35,7 @@
                     {{ manifest.destination_name or 'N/A' }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm">
-                    <span class="px-2 py-1 bg-teal bg-opacity-10 text-teal rounded-full text-xs font-semibold">
+                    <span class="px-2 py-1 status-badge-default rounded-full text-xs font-semibold">
                         {{ manifest.total_head }} head
                     </span>
                 </td>
