--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,13 @@
     </style>
     {% endif %}
     <style>
+        /* Status badges should always use default teal color, not branding colors */
+        .status-badge-default {
+            background-color: rgba(45, 139, 139, 0.1) !important;
+            color: #2D8B8B !important;
+        }
+    </style>
+    <style>
         #menu-panel a {
             display: block;
             width: 100%;
